@@ -1,3 +1,4 @@
+- GPR#6: provide findlib-install target to install everything using ocamlfind
 - Issue#3: make sur the stublibs/ directory exists before installing DLLs 
   inside it.
 - Issue#4: wrong DLL file names for Win32 ports, causing errors at
